found a bug where the header jumped when hovered as the height was auto, changed it to a fixed height and changed it to auto under 490px also changed the form-sections padding top. all code validated, no errors found

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ p {
     background-color: var(--greybg);
     width: 100%;
     z-index: 10;
-    height: auto;
+    height: 87px;
 }
 
 #navbar-links {
@@ -999,6 +999,7 @@ footer {
         width: 100vw;
         text-align: center;
         justify-content: center;
+        height: auto;
     }
 
     #navbar-links ul {
@@ -1143,7 +1144,7 @@ footer {
     }
 
     .form-section {
-        padding-top: 250px;
+        padding-top: 320px;
         height: 1150px;
     }
 
